<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/login_background2"
    tools:context="com.example.shares.LoginActivity">



    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone"
                android:hint="@string/user_name"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/password"
                android:drawableLeft="@drawable/lock"
                android:drawableStart="@drawable/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:background="@drawable/button_shape"
        android:layout_below="@id/loginForm"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:background="@drawable/button_shape_white"

        android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login" />
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instant_register"

        android:background="@drawable/button_shape_white"
        android:layout_below="@+id/login"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login"
        />
</RelativeLayout>

