<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shares.RegisterActivity"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/instant_register"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <EditText
                android:id="@+id/re_username"
                android:drawableLeft="@drawable/phone"
                android:drawableStart="@drawable/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/re_password"
                android:drawableLeft="@drawable/lock"
                android:drawableStart="@drawable/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/re_ackpassword"
                android:drawableLeft="@drawable/lock"
                android:drawableStart="@drawable/lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/ack_password"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/register"
            android:background="@drawable/button_shape"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>
