<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shares.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RadioButton

            android:id="@+id/rb_main_page"
            android:checked="true"
            android:text="@string/mainpage"
            android:drawableTop="@drawable/btn_mainpage_selector"
            style="@style/style_RadioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:drawableTop="@drawable/btn_os_selector"
            android:id="@+id/rb_overlapping_sound"
            android:text="@string/overlappingsound"
            style="@style/style_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_topic"
            android:text="@string/topic"
            android:drawableTop="@drawable/btn_topic_selector"
            style="@style/style_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_news"
            android:text="@string/news"
            android:drawableTop="@drawable/btn_news_selector"
            style="@style/style_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/radioGroup"/>
</RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>
</android.support.v4.widget.DrawerLayout>