<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/os_image_view"
            android:src="@mipmap/default_head"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/os_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/os_image_view"
            android:layout_toEndOf="@id/os_image_view"/>
        <TextView
            android:id="@+id/os_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/os_image_view"
            android:layout_toEndOf="@id/os_image_view"
            android:layout_below="@id/os_nick_name"/>
        <CheckBox
            android:id="@+id/hug"
            android:textColor="@drawable/btn_hug_textcolor_selector"
            android:text="@string/hug"
            android:background="@drawable/button_shape_stroke"
            android:drawableLeft="@drawable/btn_hug_selector"
            android:button="@null"
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/os_content_title"
        android:textSize="20sp"
        android:textColor="@color/base_color_text_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"/>

    <cn.carbs.android.expandabletextview.library.ExpandableTextView

        android:id="@+id/etv_text"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:etv_MaxLinesOnShrink="3"
        app:etv_ToExpandHint="@string/expand"
        app:etv_ToExpandHintColor="@color/color_theme"
        app:etv_ToShrinkHintColor="@color/color_theme"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/os_comment"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_shape_stroke"
            android:text="@string/comment"
            android:textColor="#0099ff"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/os_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/os_comment"
            android:layout_toStartOf="@id/os_comment"
            android:layout_alignTop="@id/os_comment"
            android:textColor="@color/colorLightBlue"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffbbbbbb"
        />
</LinearLayout>